[tool.poetry]
name = "rlsandbox"
version = "0.1.0"
description = ""
authors = ["MonadicDavidDongyang <mynameistoyoko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.0"
pytest = "^6.0.1"
pandas = "^1.1.0"
seaborn = "^0.10.1"
matplotlib = "^3.3.0"
mpi4py = "^3.0.3"
pybullet = "^2.8.5"
gym = {extras = ["atari", "box2d", "classic_control"], version = "^0.17.2"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
